bug scroll on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -862,6 +862,13 @@ textarea.custom-input {
   text-align: center;
   border-top: 4px solid #006e7b;
 }
+.page-footer--mobile {
+  min-height: 780px;
+  padding-top: 160px;
+  background: #725653 url(../img/footer-bg.jpg) no-repeat;
+  background-position: top center;
+  background-size: cover;
+}
 .page-footer__title {
   text-align: center;
   margin-bottom: 100px;
@@ -2100,6 +2107,10 @@ a {
 .homeSlide {
   width: 100%;
   min-width: 1200px;
+}
+.photo--mobile,
+.page-footer--mobile {
+  display: none;
 }
 #slide-1 .bcg {
   background-image: url('../img/bg-2.jpg');
