--- a/less/animate.less
+++ b/less/animate.less
@@ -92,7 +92,10 @@
 .homeSlide{ 
     width: 100%;
     min-width: 1200px; 
+    // display: none;
 }
+
+.photo--mobile, .page-footer--mobile{ display: none; }
 
 #slide-1 .bcg { 
     background-image: url('../img/bg-2.jpg');
