--- a/less/components/footer.less
+++ b/less/components/footer.less
@@ -8,6 +8,14 @@
 	text-align: center;
 	border-top: 4px solid @main-color;
 
+	&--mobile{
+		min-height: 780px;
+		padding-top: 160px;
+		background: #725653 url(../img/footer-bg.jpg) no-repeat;
+		background-position: top center;
+		background-size: cover;
+	}
+
 	&__title{
 		text-align: center;
 		margin-bottom: 100px;
